k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backbone
spec:
  selector:
    app: backbone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
