k8s/route2.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dummy
spec:
  host: dummy.apps.dev2.ecp.ehealthontario.ca
  to:
    kind: Service
    name: dummy
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
